k8s/istio/istio-installation.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    istio-injection: disabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: hudur-platform
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: hudur-monitoring
  labels:
    istio-injection: enabled
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: hudur-platform
spec:
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: monitoring-default
  namespace: hudur-monitoring
spec:
  mtls:
    mode: STRICT
